--- a/contactme.html
+++ b/contactme.html
@@ -33,9 +33,10 @@
                     </li>
                 </ul>
             </div>
-            <a href="https://www.facebook.com/" class="nav-link nav-item"><i class="fa fa-facebook"></i></a>
-            <a href="https://www.instagram.com/" class="nav-link nav-item"><i class="fa fa-instagram"></i></a>
-            <a href="https://twitter.com/" class="nav-link nav-item"><i class="fa fa-twitter"></i></a>
+            <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
+            <a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
+            <a href="https://twitter.com/"><i class="fa fa-twitter"></i></a>
+            </div>
         </nav>
         <div class="main">
         <div class="contact">
