--- a/home.html
+++ b/home.html
@@ -61,8 +61,8 @@
             laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit 
             esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
             officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
-            officia deserunt mollit anim id est laborum. Ut enim ad minim veniam, quis nostrud exercitation ullamco. Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit, sed do eiusmod.</p>
+            officia deserunt mollit anim id est laborum. Ut enim ad minim veniam, quis nostrud exercitation ullamco. Lorem ipsum 
+            dolor sit amet,consectetur adipiscing elit, sed do eiusmod</p>
         <img class="contactImage" src="img/contactme_pic.jpg" style="width: 1870px;">
         </div>
         <div class="footer">
