--- a/photography.html
+++ b/photography.html
@@ -63,42 +63,42 @@
         officia deserunt mollit anim id est laborum</p> 
     <div class="row">
         <div class="column">
-            <img src="img/haa_pysty2.jpg" style="height:338px">
+            <img src="img/haa_pysty2.jpg" style="width:224px;">
         </div>
         <div class="column">
-            <img src="img/malli_pysty1.jpg" style="height:338px">
+            <img src="img/malli_pysty1.jpg" style="width:224px;">
         </div>
         <div class="column">
-            <img src="img/malli_pysty6.jpg" style="height:338px">
+            <img src="img/malli_pysty6.jpg" style="width:224px;">
         </div>
         <div class="column">
-            <img src="img/haa_pysty3.jpg" style="height:338px">
+            <img src="img/haa_pysty3.jpg" style="width:224px;">
         </div>
         <div class="column">
-            <img src="img/malli_pysty3.jpg" style="height:338px">
+            <img src="img/malli_pysty3.jpg" style="width:224px;">
         </div>
         <div class="column">
-            <img src="img/malli_pysty4.jpg" style="height:338px">
+            <img src="img/malli_pysty4.jpg" style="width:224px;">
         </div>
         <div class="column">
-            <img src="img/haa_pysty1.jpg" style="height: 338px;">
+            <img src="img/haa_pysty1.jpg" style="width:224px;">
         </div>
         <div class="column">
-            <img src="img/malli_pysty2.jpg" style="height: 338px;">
+            <img src="img/malli_pysty2.jpg" style="width:224px;">
         </div>
     </div>
     <div class="rowVaaka">
         <div class="columnVaaka">
-            <img class="horsepic" src="img/hevoset_vaaka1.jpg" style="height:305px">
+            <img class="horsepic" src="img/hevoset_vaaka1.jpg" style="width:448px;">
         </div>
         <div class="columnVaaka">
-            <img src="img/haa_vaaka1.jpg" style="height:305px">
+            <img src="img/haa_vaaka1.jpg" style="width:448px;">
         </div>
         <div class="columnVaaka">
-            <img src="img/malli_vaaka1.jpg" style="height:305px">
+            <img src="img/malli_vaaka1.jpg" style="width:448px;">
         </div>
         <div class="columnVaaka">
-            <img src="img/alppiruusutiia24.jpg" style="height: 305px;">
+            <img src="img/alppiruusutiia24.jpg" style="width:448px;">
         </div>
     </div>
     <div class="footer">
