--- a/photography.html
+++ b/photography.html
@@ -18,7 +18,7 @@
                 </ul>
             </div>
             <div class="mx-auto my-2 order-0 order-md-1 position-relative">
-                <a class="mx-auto" href="home.html">
+                <a class="mx-auto" href="index.html">
                     <img src="../portfolio/img/logo2.png" class="rounded-circle">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
