--- a/photographer.html
+++ b/photographer.html
@@ -41,8 +41,8 @@
             </div>
         </nav>
     <div class="main">
-        <h2 class="kuvaaja_h2">When I have camera in my hand, I know no fear</h2>
-        <p class="kuvaaja_p1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
+        <h2 class="photo_h2">When I have camera in my hand, I know no fear</h2>
+        <p class="photo_p1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
             ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
             ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
             dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia 
@@ -56,7 +56,7 @@
             laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit 
             esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
             officia deserunt mollit anim id est laborum</p>
-        <img class="kuvaajaImage" src="img/luosto_ma_testi-17.jpg" alt="luosto" width="1650px;">
+        <img class="contactImage" src="img/luosto_ma_testi-17.jpg" alt="luosto" width="1650px;">
     </div>
         <div class="footer">
             <p>©2021 Siri Sipilä, Inc. All Rights Reserved</p>
